# api_sqlalchemy

./: README.md  main_pokemon.py  pyproject.toml  teste.ipynb
src/: controller.py  db.py  main.py  main_multiprocessing.py  models.py  schemas.py
